2010-02-25  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* deep-fork.rb: DeepFork追加

2010-02-24  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* AsyncronusRequest, AsyncronusReply: 非同期メッセージ呼び出し追加
	* Reference#asynchronus_send_with_callback,
	  Session#asyncronus_send_to: callback付き非同期呼び出し追加
	* Request#result, Request#create_exception: 例外生成を統合
	* Referrence#method_missing: NoMethodErrorの振る舞い変更(to_ary問題)
	* Request#create_exception: 例外の扱いを変更(こっちにもそのクラス
	  がある場合はその例外クラスにすることにした)

2010-02-09  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* organizer.rb: Organizer#open_deep_space: すでにDeepSpaceがオープ
	 ンされている場合の処理追加
	* port.rb: Port#export 例外処理追加
	* reference.rb: Reference#eql? 追加
	* session.rb: デバッグメッセージ変更

2009-12-01  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* deep-space.rb: DeepSpaceNoConnection#peer_uuid 追加

2009-11-18  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* deep-space.rb: DeepSpaceNoConnection#peer_id 追加

2009-10-29  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* deep-space.rb: DeepSpaceNoConnection追加
	* Organizer#deep_space: 自動接続時にConnectionRefusedだった時の処
	  理を変更

2009-10-23  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* Makefile: 追加
	* version.rb: 追加

2009-10-23  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* DeepSpace#disconnect: ソケットを正しくクローズするようにした.

2009-10-21  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy-trunkとマージ

2009-10-02  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* DeepSpace#initialize: ipv4のみのマシン対応

2008-09-17  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* Reference#==, equal?, hash: ローカル実行に変更
	* Organizer#deep_space, connect_deep_space_with_port,
	  disconnect_deep_space, id2obj: 排他制御
	* DeepSpace: DISABLE_GC 対応

2008-09-09  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* Reference#inspect: サービス停止中の処理

2008-09-02  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* Session#start: 例外発生時の処理
	* Accepter#stop: ditto.
	* Reference#inspect: サービス停止中の処理
	* Organizer#stop: ditto.
	* Organizer#when_connected: ditto.
	* evaluator: SystemExitの取り扱い
	* DeepConnect#when_disconnected: 追加
