@@ -1,3 +1,8 @@
+2010-02-25  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* organizer.rb, deep-space.rb, session.rb: DeepSpace#importにwait
+	 フラグ追加
+
 2010-02-25  Keiju Ishitsuka  <keiju@ishitsuka.com>
 
 	* deep-fork.rb: DeepFork追加
